Bug 434411 - Ambigous shortcut using *
Summary: Ambigous shortcut using *
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 20.12.3
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-14 18:46 UTC by Larsen
Modified: 2022-02-04 23:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
No problem in Kate (24.30 KB, image/png)
2021-03-17 14:46 UTC, Larsen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Larsen 2021-03-14 18:46:26 UTC
STEPS TO REPRODUCE
- Set shortcuts
  - Select Transition: Shift++ (default value afaik)
  - Add Marker/Guide quickly: * (from NumPad)
- Have a clip playing in Clip Monitor

- Press NumPad *
--> No problem, marker is set

- Press Shift++ to add a marker (gives * on a German keyboard layout)
--> "The key sequence '*' is ambigous"

- Click into Clip Monitor
- Press Shift++ again
--> "The key sequence 'Shift++' is ambigous"


Kdenlive should distinguish between * and NumPad* when setting shortcuts.


SOFTWARE/OS VERSIONS
Windows: 10

ADDITIONAL INFORMATION
I noticed this while working on my laptop (without a NumPad). Normally working on a normal keybord, and using * on the NumPad is no problem.
Comment 1 Larsen 2021-03-17 14:46:36 UTC
Tested with Kate (as a side-effect of bug 433698) and there it seems to be handled correctly, see screenshot.
Comment 2 Larsen 2021-03-17 14:46:57 UTC
Created attachment 136788 [details]
No problem in Kate
Comment 3 Julius Künzel 2022-02-04 23:43:02 UTC
Git commit 78b02b50570bd2a41db1082f14b1c624d9874b1e by Julius Künzel.
Committed on 04/02/2022 at 23:42.
Pushed by jlskuz into branch 'master'.

"Add Marker/Guide quickly" allow shortcut * only on keypad (otherwise *
is ambigous with Shift++)

M  +1    -1    src/mainwindow.cpp

https://invent.kde.org/multimedia/kdenlive/commit/78b02b50570bd2a41db1082f14b1c624d9874b1e