"Add Marker/Guide quickly" allow shortcut * only on keypad (otherwise * is ambigous with Shift++)

BUG: 434411